colors added and renaming

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="err_image_not_selected">"You haven't picked a profile image"</string>
     <string name="msg_exit">Are you sure you want to exit?</string>
     <string name="msg_alarm">Send Emergency bell to Admin?</string>
-    <string name="msg_checkin">Are you sure you want to Checkin? (you will not be able to checkin again for this date)</string>
-    <string name="msg_checkout">Are you sure you want to Checkout? (you will not be able to checkout again for this date)</string>
+    <string name="msg_checkin">Are you sure you want to Start Job?</string>
+    <string name="msg_checkout">Are you sure you want to End this Job?</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_confirm">Confirm</string>
     <string name="button_ok">OK</string>
